# someip_dev

./: .gitignore  README.md  hammer.py
etc/: build-commonapi.sh
routing/: routingmanagerd.json
routing/routingmanager/: routingmanagerd.json.in
scripts/: deploy_script_to_service.py  host_ip.txt  pre_check.py  run_client.sh  run_routingd.sh  run_server.sh  run_service.sh
scripts/attacker/: scapy_replay_same_node.py  scapy_sniff.py
services/: README.txt  build.py  build.sh  build_all.py  collect_service_setting.py  deploy.py  deploy.sh  gen_code.sh  init_someip_app.py  init_someip_app.sh  init_someip_apps.sh  release.py  update_json_scripts.py
services/Audio/: CMakeLists.txt  deploy.py  someip_service.prop
services/Audio/conf/: client.json.in  server.json.in
services/Audio/fidl/: Audio.fidl  Audio_tcp.fdepl  Audio_udp.fdepl
services/Audio/src/: Audio_client.cpp  Audio_server.cpp  Audio_server_stubimpl.cpp  Audio_server_stubimpl.hpp
services/Collision/: CMakeLists.txt  someip_service.prop
services/Collision/conf/: client.json.in  server.json.in
services/Collision/fidl/: Collision.fdepl  Collision.fidl  Collision_tcp.fdepl
services/Collision/src/: Collision_client.cpp  Collision_server.cpp  Collision_server_stubimpl.cpp  Collision_server_stubimpl.hpp
services/Driving/: CMakeLists.txt  someip_service.prop
services/Driving/conf/: client.json.in  server.json.in
services/Driving/fidl/: Driving.fdepl  Driving.fidl  Driving_tcp.fdepl
services/Driving/src/: Driving_client.cpp  Driving_server.cpp  Driving_server_stubimpl.cpp  Driving_server_stubimpl.hpp
services/EventApp/: someip_service.prop
services/EventApp/conf/: client_tcp.json.in  client_udp.json.in  server_tcp.json.in  server_udp.json.in
services/EventApp/fidl/: EventApp.fidl  EventApp_udp.fdepl
services/EventApp/src/: EventApp_server.cpp  EventApp_server_stubimpl.cpp  EventApp_server_stubimpl.hpp
services/EventApp2/: CMakeLists.txt
services/EventApp2/src/: EventApp2_server.cpp
services/HelloWorld/: build.sh  gen_code.sh
services/HelloWorld/fidl/: HelloWorld.fidl  HelloWorld_tcp.fdepl
services/HelloWorld/src/: HelloWorldStubImpl.cpp  HelloWorldStubImpl.hpp
services/Intersection/: CMakeLists.txt  someip_service.prop
services/Intersection/conf/: client.json.in  server.json.in
services/Intersection/fidl/: Intersection.fidl  Intersection_tcp.fdepl  Intersection_udp.fdepl
services/Intersection/src/: Intersection_client.cpp  Intersection_server.cpp  Intersection_server_stubimpl.cpp  Intersection_server_stubimpl.hpp
services/Logging/: CMakeLists.txt  someip_service.prop
services/Logging/conf/: client.json.in  server.json.in
services/Logging/fidl/: Logging.fdepl  Logging.fidl  Logging_udp.fdepl
services/Logging/src/: Logging_client.cpp  Logging_server.cpp  Logging_server_stubimpl.cpp  (+1 more)
services/MethodApp/: CMakeLists.txt  build.sh  gen_code.sh
services/ObjectDetection/: CMakeLists.txt  someip_service.prop
services/SteeringWheel/: CMakeLists.txt  someip_service.prop
services/TrafficLight/: CMakeLists.txt  someip_service.prop
services/Transmission/: CMakeLists.txt  someip_service.prop
services/VehicleAccel/: CMakeLists.txt  someip_service.prop
services/VehicleGear/: CMakeLists.txt
services/VehicleLocation/: CMakeLists.txt  someip_service.prop
services/VehiclePose/: CMakeLists.txt  someip_service.prop
services/VehicleSpeed/: CMakeLists.txt  someip_service.prop
services/Window_FL/: CMakeLists.txt  someip_service.prop
services/Window_FR/: CMakeLists.txt  someip_service.prop
services/Window_RL/: CMakeLists.txt  someip_service.prop
services/Window_RR/: CMakeLists.txt  someip_service.prop
services/Window_RR/conf/: client.json.in  server.json.in
services/Window_RR/fidl/: Window_RR.fdepl  Window_RR.fidl  Window_RR_tcp.fdepl
services/Window_RR/src/: Window_RR_client.cpp  Window_RR_server.cpp  Window_RR_server_stubimpl.cpp  Window_RR_server_stubimpl.hpp
services/routingmanager/: get_git_path.py  host_ip.txt  pre_check.py  routingmanager.prop  routingmanagerd.json.in  run_client.sh  run_routingd.sh  run_server.sh  someip_service.prop
services/template/: SomeIpService.csv  SomeIpService.fdepl.in  SomeIpService.fidl.in
services_example/EventApp/: CMakeLists.txt  gen_code.sh
services_example/EventApp2/: someip_service.prop
services_example/HelloWorld/: CMakeLists.txt
services_example/HelloWorld/conf/: client_tcp.json.in  service_tcp.json.in  service_udp.json.in
services_example/HelloWorld/fidl/: HelloWorld_udp.fdepl
services_example/HelloWorld/src/: HelloWorldClient.cpp  HelloWorldService.cpp
(+173 files in other folders)
